feat: implement core payment processing engine including state machine, idempotency service, and administrative card management