@@ -4,10 +4,16 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.MissingRequestHeaderException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
+import javax.validation.ConstraintViolationException;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
@@ -18,20 +24,66 @@ public class GlobalExceptionHandler {
     public ResponseEntity<Map<String, String>> handleNotFound(RuntimeException ex) {
         log.warn(ex.getMessage());
         return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Map.of("error", "resource_not_found"));
+                .body(error("resource_not_found"));
     }
 
     @ExceptionHandler(AuthorizationStrategyNotFoundException.class)
     public ResponseEntity<Map<String, String>> handleStrategy(AuthorizationStrategyNotFoundException ex) {
         log.warn(ex.getMessage());
         return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                .body(Map.of("error", "unsupported_route"));
+                .body(error("unsupported_route"));
+    }
+
+    /** State-machine violations and idempotency conflicts (e.g. double capture, key reuse). */
+    @ExceptionHandler(IllegalStateException.class)
+    public ResponseEntity<Map<String, String>> handleConflict(IllegalStateException ex) {
+        log.warn(ex.getMessage());
+        return ResponseEntity.status(HttpStatus.CONFLICT)
+                .body(error("conflict", ex.getMessage()));
+    }
+
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<Map<String, String>> handleValidation(MethodArgumentNotValidException ex) {
+        String detail = ex.getBindingResult().getFieldErrors().stream()
+                .map(fe -> fe.getField() + ": " + fe.getDefaultMessage())
+                .sorted()
+                .collect(Collectors.joining("; "));
+        log.warn("Validation failed: {}", detail);
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body(error("validation_failed", detail));
+    }
+
+    @ExceptionHandler(ConstraintViolationException.class)
+    public ResponseEntity<Map<String, String>> handleConstraintViolation(ConstraintViolationException ex) {
+        log.warn("Validation failed: {}", ex.getMessage());
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body(error("validation_failed", ex.getMessage()));
+    }
+
+    @ExceptionHandler(MissingRequestHeaderException.class)
+    public ResponseEntity<Map<String, String>> handleMissingHeader(MissingRequestHeaderException ex) {
+        log.warn(ex.getMessage());
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body(error("missing_header", ex.getHeaderName()));
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<Map<String, String>> handleUnexpected(Exception ex) {
         log.error("Unexpected error", ex);
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .body(Map.of("error", "internal_server_error"));
+                .body(error("internal_server_error"));
+    }
+
+    private static Map<String, String> error(String code) {
+        return Collections.singletonMap("error", code);
+    }
+
+    private static Map<String, String> error(String code, String detail) {
+        Map<String, String> body = new LinkedHashMap<>();
+        body.put("error", code);
+        if (detail != null) {
+            body.put("detail", detail);
+        }
+        return Collections.unmodifiableMap(body);
     }
 }
